--- a/gb/22/11/22/n13870950.md
+++ b/gb/22/11/22/n13870950.md
@@ -22,45 +22,38 @@
 <p>周二，上海和深圳上市股票的沪深300指数持平，但较上周重新开放的乐观情绪驱动的高点下跌了2.5%以上。迄今为止，基准指数下跌了大约四分之一。◇</p>
 <p>责任编辑：林妍#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/21/n13870437.md#1">大陆楼市持续低迷 逾百城购房首付降至20%</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/22/n13870485.md#1">【网海拾贝】习近平的无礼与中共的反文明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895551.md#1">谭德塞：世卫需要更多中国疫情信息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895491.md#1">中国染疫人数激增 欧盟建议加强病毒监测</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136979.md#1">【环球直击】英美谴责港府通缉五港人 关切黎智英案</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242784.md#1" target="_blank">【征文】张东园：传统文化中的善恶有报事例</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232059.md#1" target="_blank">大陆移民旧金山推崇法轮功：真善忍好</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/10/n11176292.md#1" target="_blank">【征文】田园：《资治通鉴》中的传统智慧</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/9/n13881213.md#1">白虎下凡保大唐 历尽艰辛兑誓约（三）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/22/n13889893.md#1">沁园春?贺神韵2023全球巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895469.md#1">【新闻大家谈】大咖云集 热评2022年度之最</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895247.md#1">【全球新闻】重症白肺数量惊人 大陆医生曝实情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895368.md#1">【财商天下】盘点2022十大事件 中国经济大倒退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893060.md#1">谷爱凌力压梅西成年度运动员 中国网民炸锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893815.md#1">意大利：中国飞米兰的乘客近一半感染病毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893026.md#1">被疫情海啸压垮 北京医生：我们不是铁人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13894733.md#1">黄安曝中国殡仪馆火化大排长龙 网民诉惨状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893064.md#1">舒淇返台低调搭高铁 与林心如惊喜玩自拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893138.md#1">知名演员潘德民去世 曾出演众多红色电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893835.md#1">徐娇自嘲感染“炫饭株” 晒病照喊“被饿醒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893094.md#1">何韵诗举办网上音乐会 唱《春夏秋冬》表牵挂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894250.md#1">美国73岁男子以喷射客机为家 实现年少梦想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893287.md#1">小狗能活多久？ 哪个品种的寿命最长？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893675.md#1">尿频影响睡眠 3种常见夜尿症及治疗方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/12/n13883334.md#1">不再让酒精伤肝 养肝护肝全攻略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894434.md#1">含维生素K1的绿叶蔬菜可降低晚年骨折风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120907.md#1">【古道人生】结婚十年同寝只一月 夫妻终不能团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137451.md#1">【马克时空】中共重金诱惑 想偷台湾CH-47</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137471.md#1">【秦鹏观察】中南海祭出3大招 耶伦批北京胡来</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137357.md#1">【舞蹈三剑客】2024神韵巡演在即 三剑客久违的Q&#038;A</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136580.md#1">北京地铁车厢断裂515人送医 近千人雪夜逃离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135089.md#1">港星周海媚在北京猝逝 旧爱吕良伟发文悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/22/n13870950.htm">越清零越不灵？中国正经历“创纪录封锁”</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/11/22/n13870950.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
